--- a/myFigure01.tex
+++ b/myFigure01.tex
@@ -11,7 +11,7 @@
           \begin{minipage}{\wii}
             \centering
             \centerline{\scriptsize Target database image $j$}
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/j.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/j.jpg}
           \end{minipage}  
           \vspace{3mm}
           \\
@@ -19,34 +19,34 @@
           \\
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/a.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/a.jpg}
           \end{minipage}
           %  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/b.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/b.jpg}
           \end{minipage}
           %  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/c.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/c.jpg}
           \end{minipage} 
           \\
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/aftrs.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/aftrs.jpg}
             \newline
             (a)
           \end{minipage}  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/bftrs.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/bftrs.jpg}
             \newline
             (b)
           \end{minipage}  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/cftrs.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2882/cftrs.jpg}
             \newline
             (c)
           \end{minipage} 
@@ -70,7 +70,7 @@
           \begin{minipage}{\wii}
             \centering
             \centerline{\scriptsize Target database image $j$}
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/j.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/j.jpg}
           \end{minipage}  
           \vspace{3mm}
           \\
@@ -78,32 +78,32 @@
           \\
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/a.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/a.jpg}
           \end{minipage}  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/b.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/b.jpg}
           \end{minipage}  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/c.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/c.jpg}
           \end{minipage} 
           \\
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/aftrs.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/aftrs.jpg}
             \newline
             (a)
           \end{minipage}  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/bftrs.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/bftrs.jpg}
             \newline
             (b)
           \end{minipage}  
           \begin{minipage}{\wii}
             \centering
-            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/cftrs.pdf}
+            \includegraphics[width=\linewidth]{imgs/wVS3q/2932/cftrs.jpg}
             \newline
             (c)
           \end{minipage} 
