--- a/myFigure02.tex
+++ b/myFigure02.tex
@@ -20,7 +20,7 @@
 	 \colorbox{gray}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo01d.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo01d.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -30,7 +30,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo02d.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo02d.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -38,7 +38,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo03d.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo03d.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -46,7 +46,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo04d.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo04d.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -56,7 +56,7 @@
 	 \colorbox{gray}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo01.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo01.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -66,7 +66,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo02.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo02.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -74,7 +74,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo03.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo03.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -82,7 +82,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo04.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo04.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -92,7 +92,7 @@
 	 \colorbox{gray}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo01b.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo01b.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -102,7 +102,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo02b.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo02b.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -110,7 +110,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo03b.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo03b.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -118,7 +118,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo04b.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo04b.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -128,7 +128,7 @@
 	 \colorbox{gray}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo01c.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo01c.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -138,7 +138,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo02c.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo02c.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -146,7 +146,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo03c.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo03c.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -154,7 +154,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/demo04c.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/demo04c.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -174,7 +174,7 @@
 	 \colorbox{gray}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvQ.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvQ.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -184,7 +184,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvS.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvS.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -192,7 +192,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvK.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvK.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -200,7 +200,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvB.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/05aggrvB.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -210,7 +210,7 @@
 	 \colorbox{gray}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvQ.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvQ.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -220,7 +220,7 @@
 	 \colorbox{myRed}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvS.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvS.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -228,7 +228,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvK.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvK.jpg}
 		  }
 		\end{minipage}
 	 }
@@ -236,7 +236,7 @@
 	 \colorbox{myGreen}{
 		\begin{minipage}{\subw}
 		  \centerline{
-		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvB.pdf}
+		  \includegraphics[width=1.05\linewidth]{imgs/aggrv/08aggrvB.jpg}
 		  }
 		\end{minipage}
 	 }
