sloved problem with missing figure

--- a/template.tex
+++ b/template.tex
@@ -125,7 +125,7 @@ placed here. General acknowledgments should be placed at the end of the article.
     \maketitle
     \begin{center}
         \centering
-        \includegraphics[width=.85\textwidth]{imgs/titleTeX.png}
+        \includegraphics[width=.85\textwidth]{imgs/titleTeX.jpg}
         \vspace*{-3mm}
         \captionof{figure}
         {
