--- a/template.tex
+++ b/template.tex
@@ -55,6 +55,8 @@ grestore
 \usepackage{caption}
 \usepackage{tabularx}
 \usepackage[table]{xcolor}
+% Strike through text
+ \usepackage[normalem]{ulem}
 %
 % \usepackage{mathptmx}      % use Times fonts if available on your TeX system
 %
@@ -65,6 +67,7 @@ grestore
 % COLORS
 \definecolor{myGreen}{HTML}{33FF00}
 \definecolor{myRed}{HTML}{FF3030}
+\definecolor{myGrey}{HTML}{AA5555}
 % please place your own definitions here and don't use \def but
 % \newcommand{}{}
 \newcommand{\PP}{\mathbb{P}}
@@ -130,7 +133,7 @@ placed here. General acknowledgments should be placed at the end of the article.
         \captionof{figure}
         {
           The goal of this work is to localize a query photograph (left) by finding other images of the same place in a large geotagged image database (right). 
-          We cast the problem as a classification task and learn a classifier for each location in the database. We develop a non-parametric procedure to calibrate the outputs of the large number of per-location classifiers without the need for additional positive training data.  
+          We cast the problem as a classification task and learn a classifier for each location in the database. We develop a non-parametric \textcolor{myGrey}{(can we asy tis for FV e-svm norm?)} procedure to calibrate the outputs of the large number of per-location classifiers without the need for additional positive training data.  
         }
     \end{center}%
 }]
@@ -140,7 +143,10 @@ placed here. General acknowledgments should be placed at the end of the article.
 
 \begin{abstract}
 The aim of this work is to localize a query photograph by finding other images depicting the same place in a large geotagged image database. 
-This is a challenging task due to changes in viewpoint, imaging conditions and the large size of the image database. The contribution of this work is two-fold. First, we cast the place recognition problem as a classification task and use the available geotags to train a classifier for each location in the database in a similar manner to per-exemplar SVMs in object recognition. Second, as only few positive training examples are available for each location, we propose a new approach to calibrate all the per-location SVM classifiers using \emph{only} the negative examples. The calibration we propose relies on a significance measure essentially equivalent to the p-values classically used in statistical hypothesis testing. Experiments are performed on a database of 25,000 geotagged street view images of Pittsburgh and demonstrate improved place recognition accuracy of the proposed approach over the previous work.
+This is a challenging task due to changes in viewpoint, imaging conditions and the large size of the image database. The contribution of this work is two-fold. First, we cast the place recognition problem as a classification task and use the available geotags to train a classifier for each location in the database in a similar manner to per-exemplar SVMs in object recognition. 
+\textcolor{myGrey}{
+Second, as only few positive training examples are available for each location, we propose a new approach to calibrate all the per-location SVM classifiers using \emph{only} the negative examples. The calibration we propose relies on a significance measure essentially equivalent to the p-values classically used in statistical hypothesis testing. Experiments are performed on a database of 25,000 geotagged street view images of Pittsburgh and demonstrate improved place recognition accuracy of the proposed approach over the previous work.
+\emph{(FV calibration)}}
 \keywords{Place recognition \and SVM calibration \and Geo-location}
 % \PACS{PACS code1 \and PACS code2 \and more}
 % \subclass{MSC code1 \and MSC code2 \and more}
@@ -152,16 +158,21 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
    Visual place recognition~\cite{Cummins09,Knopp2010,Schindler07} is a challenging task as the query and database images may depict the same 3D structure (e.g.\ a building) from a different camera viewpoint, under different illumination, or the building can be partially occluded. 
    In addition, the geotagged database may be very large. For example, we estimate that Google street-view of France alone contains more than 60 million panoramic images.
 
+   \textcolor{myGrey}{
    Similar to other work in large scale place recognition~\cite{Cummins09,Knopp2010,Schindler07} and image retrieval~\cite{Nister06,Philbin07,Sivic2003}, we build on the bag-of-visual-words representation~\cite{Csurka04,Sivic2003} and describe each image by a set of quantized local invariant features, such as SURF~\cite{Bay06} or SIFT~\cite{Lowe04}.  Each image is then represented by a weighted histogram of visual words, called the ``tf-idf vector'' due to the commonly used tf-idf weighting scheme~\cite{Sivic2003}. The vectors are usually normalized to have unit $L_2$ norm and the similarity between the query and a database vector is then measured by their dot product. This representation has some desirable properties such as robustness to background clutter and partial occlusion. Efficient retrieval is then achieved using inverted file indexing. 
+   }
 
+   \textcolor{myGrey}{(This is just BOW SOTA. We should also speak about FV)}
    Recent work has looked at different ways to improve the retrieval accuracy and speed of the bag-of-visual-words model for image and object retrieval. Examples include: 
    (i) learning better visual vocabularies from training examples with matched/non-matched descriptors~\cite{Mikulik2010,Philbin10b}; 
    (ii)  developing quantization methods less prone to quantization errors~\cite{Jegou2011,Philbin08} or 
    (iii) combining results from multiple query images depicting the same scene~\cite{Chum11,Chum07b}.
 
+   \textcolor{myGrey}{ (Need to be modified for FV)
    While in image retrieval  databases are typically unstructured collections of images, place recognition databases are usually structured: images have geotags, are localized on a map and depict a consistent 3D world. %~\cite{Gronat2011}. 
    Knowing the structure of the database can lead to significant improvements in both speed and accuracy of place recognition. 
    Examples include: (i) building an explicit 3D reconstruction of the scene~\cite{Irschara2009,Li10,Li12}; (ii) constructing an image graph~\cite{Philbin10c,Turcot09}, where images are nodes and edges connect close-by images on the map~\cite{Torii11}, or (iii) using the geotagged data as a form of supervision to select local features that characterize a certain location~\cite{Knopp2010,Schindler07} or re-rank retrieved images~\cite{Zamir10}.
+   }
 
    In this work, we also take advantage of geotags as an available form of supervision and investigate whether the place recognition problem can be cast as a classification task.
    While visual classifiers were investigated for landmark recognition~\cite{Li09}, where many photographs are available for each of the landmarks, in this work we wish to train a classifier {\em for each location on the map} in a similar manner to per-exemplar classification in object recognition~\cite{Malisiewicz11}. This is beneficial as  each classifier can learn which features are discriminative for a particular place. % and down-weight features occurring at other places.
@@ -176,21 +187,21 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
 \section{Per-location classifiers for place recognition}
 \label{sec:classifiers}
 %%%%%%%%%%%%%%%%%%%%%%%%
-  \textcolor{red}{
+  \textcolor{myGrey}{
   This section (and almost the whole paper) implicitly speaks about tf-idf. However, there will be a section about FV later. We should re-design this section to be more general. We can keep \emph{Dual representaton} outside as separate section related to tf-idf.
   } \newline
-   We are given tf-idf vectors $x_j$, one for each database image $j$. The goal is to learn a score $f_j$ for each database image $j$, so that, at test time, given the descriptor $q$ of the query image, we can either retrieve the correct target image as the image $j^*$ with the highest score 
+   We are given an image representation $\vec{x_j}$, one for each database image $j$. This representation can be sparse tf-idf vector or a dnese vector such as Fisher vector (FV). The goal is to learn a score $f_j$ for each database image $j$, so that, at test time, given the representaiton $\vec{q}$ of the query image, we can either retrieve the correct target image as the image $j^*$ with the highest score 
    \begin{equation}
    \label{eq:class}
-    j^*=\operatorname*{arg\;max}_{j} f_j(q) 
+    j^*=\operatorname*{arg\;max}_{j} f_j(\vec{q}) 
    \end{equation}
 
    \noindent
    or use these scores to rank candidate images and use geometric verification to try and identify the correct location in an $n$-best list.
    Instead of approaching the problem directly as a large multiclass classification problem, we tackle the problem by learning a per-exemplar linear SVM classifier~\cite{Malisiewicz11}  for each database image $j$.
-   Similar to~\cite{Knopp2010}, we use the available geotags to construct the negative set $\mathcal N_j$ for each image $j$. The negative set is constructed so as to concentrate difficult negative examples, i.e.\ from images that are far away from the location of image $j$ and at the same time similar to the target image as measured by the dot product between their feature vectors. The details of the construction procedure will be given in section~\ref{sec:experiments}.  The positive set $\mathcal P_j$ is represented by the only positive example, which is $x_j$ itself. 
+   Similar to~\cite{Knopp2010}, we use the available geotags to construct the negative set $\mathcal N_j$ for each image $j$. The negative set is constructed so as to concentrate difficult negative examples, i.e.\ from images that are far away from the location of image $j$ and at the same time similar to the target image as measured by the dot product between their feature vectors. The details of the construction procedure will be given in section~\ref{sec:experiments}.  The positive set $\mathcal P_j$ is represented by the only positive example, which is $\vec{x_j}$ itself. 
 
-   \textcolor{red}{
+   \textcolor{myGrey}{
    Each SVM classifier produces a score $s_j$ which is a priori not comparable with the score of the other classifiers. A calibration of these scores will therefore be key to convert them to comparable scores $f_j$. This calibration problem is more difficult than usual given that we only have a single positive example and will be addressed in section~\ref{sec:calibration}.
    \textit{(Later we speak about positive set expansion which sounds fishy... For IJCV paper we should really do exemplar SVM only.)}
    }
@@ -199,49 +210,52 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       Each linear SVM classifier learns a score $s_j$ of the form 
 
-      \begin{equation}
+      \begin{align}
        \label{eq:linear}
-        s_j(q)=w_j^T q+b_j
-      \end{equation}
+        s_j(\vec{q})=\vec{q}^T \vec{w_j}+b_j
+      \end{align}
 
       \noindent
-      where $w_j$ is a weight vector re-weighting contributions of individual visual words and $b_j$ is the bias specific for image $j$. Given the training sets $\mathcal P_j$ and $\mathcal N_j$, the aim is to find a vector $w_j$ and bias $b_j$ such that the score difference between $x_j$ and the closest neighbor from its negative set $\mathcal N_j$ is {\em maximized}.
-      \textcolor{red}{
+      where $\vec{w_j}$ is a weight vector re-weighting contributions of individual visual words and $b_j$ is the bias specific for image $j$. Given the training sets $\mathcal P_j$ and $\mathcal N_j$, the aim is to find a vector $\vec{w_j}$ and bias $b_j$ such that the score difference between $\vec{x_j}$ and the closest neighbor from its negative set $\mathcal N_j$ is {\em maximized}.
+      \textcolor{myGrey}{
       \emph{(This is not true as we do a soft margin SVM. This statement is valid only for hard margin formulation.)}
       }
-      Learning the weight vector $w_j$ and bias $b_j$ is formulated as a minimization of the convex objective 
+      Learning the weight vector $\vec{w_j}$ and bias $b_j$ is formulated as a minimization of the convex objective 
 
       \begin{align}
         \nonumber
-        \Omega(w_j,b_j)=||w_j||^{2}& +C_1\sum_{x\in \mathcal P_j}h(w_j^Tx+b_j)   \\
+        \Omega(\vec{w_j},b_j)=||\vec{w_j}||^{2}& +C_1\sum_{x\in \mathcal P_j}h(\vec{w_j}^Tx+b_j)   \\
         \label{eq:obj}
-                           & +C_2\sum_{x\in \mathcal N_j}h(-w_j^Tx-b_j), 
+                           & +C_2\sum_{x\in \mathcal N_j}h(-\vec{w_j}^Tx-b_j), 
       \end{align}
 
       \noindent
       where the first term is the regularizer, the second term is the loss on the positive training data weighted by scalar parameter $C_1$, and the third term is the loss on the negative training data weighted by scalar parameter $C_2$.   
       This is a standard SVM formulation \eqref{eq:obj}, also used in exemplar-SVM~\cite{Malisiewicz11}.
-      In our case $h$ is the squared hinge loss, which we found to work better in our setting than the standard hinge-loss. $w_j$ and $b_j$ are learned separately for each database image $j$ in turn. 
-      In our case (details in section~\ref{sec:experiments}), we use about 1-5 positive examples 
-      \textcolor{red}{
+      In our case $h$ is the squared hinge loss, which we found to work better in our setting than the standard hinge-loss. $\vec{w_j}$ and $b_j$ are learned separately for each database image $j$ in turn. 
+      \sout{
+      In our case (details in section~\ref{sec:experiments}), we use about 1-5 positive examples, and 200 negative examples. As the dimensionality of $\vec{w}$ is $100,000$ all training data points are typically support vectors. 
+      }
+      \textcolor{myGrey}{
         \emph{(Above we claim that only a single positive is available)}
       }
-      , and 200 negative examples. As the dimensionality of $w$ is $100,000$ all training data points are typically support vectors. 
-   \textcolor{red}{
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
    \paragraph{Expanding the positive set.}
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \sout{
       A typical geotagged database may contain several images depicting a particular location. For example, neighboring street-view panoramas depict the same store front from different viewpoints. However, a specific place is often imaged only in a small number (2-5) of neighboring panoramas. 
       If such images are identified, they may provide a few additional positive examples for the particular place and improve the quality of that per-location classifier. Moreover, treating them erroneously as negatives is likely to bias the learnt classifier.
       We automatically identify such images as geo-graphically close-by images to the location $j$.
       These images can be further verified using geometric verification~\cite{Philbin07} and included in the positive training data for location $j$. Details are given in section~\ref{sec:experiments}.
       }
+      
+
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \paragraph{Dual representation.}
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-      For each image $j$ in the database the linear SVM \eqref{eq:linear} is learned. The image is then represented by corresponding weight $w_j$ and bias $b_j$. The main disadvantage of this representation is that while the original high dimensional tf-idf vector $x_j$ is sparse the learned weight vector $w_j$ is dense. Hence a memory requirement for storage of the new representation is enormous.
+      For each image $j$ in the database the linear SVM \eqref{eq:linear} is learned. The image is then represented by corresponding weight $\vec{w_j}$ and bias $b_j$. The main disadvantage of this representation is that when the original vector $\vec{x_j}$ is high dimensional and sparse, for instance tf-idf vector, the learned weight vector $\vec{w_j}$ is dense. Hence a memory requirement for storage of the new representation is enormous.
 
-      This drawback can be efficiently solved by storing SVM vectors in dual representation. The key observation is that the number of training data $K$ is significantly lower then dimensionality $D$ of the original tfidf vector. In the following we omit index $j$ for clarity. Since $K\ll D$ all the training data points are support vectors, hence each vector $w$ can be then expressed in dual form as lienar combination
+      This drawback can be efficiently solved by storing SVM vectors in dual representation. The key observation is that a number of training data $K$ is significantly lower then dimensionality $D$ of the original tfidf vector. In the following we omit index $j$ for clarity. Since $K\ll D$ all the training data points are support vectors, hence each vector $w$ can be then expressed in dual form as lienar combination
 
       \begin{equation}
         w=\sum_{i\in \mathcal{P},\mathcal{N}} \alpha_i d_i = \mathcal{X} \cdot \vec{\alpha}
@@ -249,14 +263,14 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
       \end{equation}
 
       \noindent
-      where $\alpha_i$, elemnts of vector $\vec{\alpha}$, are coefficients of linear combination of training data for $x_i$ and the matrix $\mathcal{X}$ contains descriptors of all database. Notice that vector $\vec{\alpha}$ is sparse and number of non-zero elements depends on the number of training data $K$. Finally, a column wise matrix $\mathcal{W}$ containing all learned weights can be expressed in dual form as
+      where $\alpha_i$, the elemnts of vector $\vec{\alpha}$, are coefficients of linear combination of training data $\vec{x_i}$ and the matrix $\mathcal{X}$ contains descriptors of all database. Notice that the vector $\vec{\alpha}$ is sparse and number of non-zero elements depends on the number of training data $K$. Finally, a column wise matrix $\mathcal{W}$ containing all learned weights can be expressed in dual form as
 
       \begin{equation}
         \mathcal{W} = \mathcal{X}\cdot \mathcal{A}  
       \end{equation}
 
       \noindent
-      where $\mathcal{A}$ is a sparse cofficient matrix where each column corresponds to vector $\vec{\alpha}$ from equation \eqref{eq:dual}. Hence, to be able to reconstruct the matrix $\mathcal{W}$ one has to keep only two sparse matrixes, the descriptor matrix $\mathcal{X}$ and coefficient matrix $\mathcal{A}$.
+      where $\mathcal{A}$ is a sparse cofficient matrix where each column corresponds to vector $\vec{\alpha}$ from equation \eqref{eq:dual}. Hence, to be able to reconstruct the matrix $\mathcal{W}$ one has to keep only two sparse matrixes, the descriptor matrix $\mathcal{X}$ and the coefficient matrix $\mathcal{A}$.
 
       At query time, given the query image $q$, the uncalibrated SVM score between the query image and each of the database images can be computed by equation \eqref{eq:linear} which can be expressed in a matrix form as follows
       \begin{equation}
@@ -279,7 +293,7 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
    Since the classification scores $s_j$ are learned independently for each location $j$, they cannot be directly used as the scores $f_j$ from eq.~\eqref{eq:class}. As illustrated in figure~\ref{fig:calib}, for a given query $q$, a classifier from an incorrect location (b) can have a higher score~\eqref{eq:linear} than the classifier from the target location (a). Indeed, the SVM score is a signed distance from the discriminating hyperplane and is a priori not comparable between different classifiers. This issue is addressed by calibrating scores of the learnt classifiers. The goal of the calibration is to convert the output of each classifier into a probability (or in general a ``universal" score), which can be meaningfully compared across classifiers. 
 
    Several calibration approaches have been proposed in the literature (see~\cite{gebel2007calibrating} and references therein for a review). The most known consists of fitting a logistic regression to the output of the SVM~\cite{Platt99}.  This approach, however, has a major drawback as it imposes a parametric form (the logistic a.k.a.\ sigmoid function) of the likelihood ratio of the two classes, which typically leads to biased estimates of the calibrated scores. Another important calibration method is the isotonic regression~\cite{zadrozny2002transforming}, which allows for a non-parametric estimate of the output probability.
-   Unfortunately, the fact that we have only a single positive example (or only very few of them, and which are all used for training) essentially prevents us from using any of these methods. 
+   Unfortunately, the fact that we have only a single positive example \sout{(or only very few of them, and which are all used for training)} essentially prevents us from using any of these methods. 
    However, given the availability of negative data, it is easy to estimate the significance of the score of a test example compared to the typical score of (plentifully available) negative examples. Intuitively, we will use a large dataset of negative examples to calibrate the individual classifiers so that they {\em reject the same number of negative examples} at each level of the calibrated score.
    We will expand this idea in detail and use concepts from hypothesis testing to propose a calibration method.
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -287,7 +301,8 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
       In the following, we view  the problem of deciding whether a query image matches a given location based on the corresponding SVM score as a hypothesis testing problem. In particular, we appeal to ideas from the traditional frequentist hypothesis testing framework also known as Neyman-Pearson (NP) framework (see e.g.~\cite{casella2001statistical}, chap.~8).
 
-      We define the null hypothesis as $H_0=\{\text{the image is a random image}\}$ and the alternative as $H_1=\{\text{the image matches the particular location}\}$. The NP framework focuses on the case where the distribution of the data under $H_0$ is well known, whereas the distribution under $H_1$ is not accessible or too complicated to model, which matches perfectly our setting.
+      We define the null hypothesis as $H_0=\{$the image is a random image$\}$ and the alternative as $H_1=\{$the image matches the particular location$\}$. The NP framework focuses on the case where the distribution of the data under $H_0$ is well known, whereas the distribution under $H_1$ is not accessible or too complicated to model, which matches perfectly our setting.
+      \textcolor{myGrey}{How about the other NP assumptions? We should as Guillaume}
 
       In the NP framework, the \emph{significance level} of a score is measured by the p-value or equivalently by the value of the cumulative density function  (cdf) of the distribution of the negatives at a given score value. The cdf is the function $F_0$ defined by $F_0(s)=\PP(S_0\leq s)$, where $S_0$ is the random variable corresponding to the scores of negative data (see figure~\ref{fig:qntExample} for an illustration of the relation between the cdf and the density of the function). The cdf (or the corresponding p-value\footnote{
       The notion most commonly used in statistics is in fact the p-value. The p-value associated to a score is the quantity $\alpha(s)$ defined by $\alpha(s)=1-F_0(s)$; so the more significant the score is, the closer to $1$ the cdf value is, and the closer to $0$ the p-value is. To keep the presentation simple, we avoid the formulation in terms of p-values and we only talk of the probabilistic calibrated values obtained from the cdf $F_0$.
@@ -321,6 +336,12 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
    \paragraph{Summary of the calibration procedure.}
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \;.\newline
+      OFFLINE\newline
+      ...
+      \newline
+      ONLINE\newline
+      ...
       For each place, keep $\Ncal$ scores from negative examples $(s_n)_{1 \leq n \leq \Ncal}$ used for calibration together with the associated cumulative probability values $\hat{F}_0(s_n)$.
       Given the score of the query $s_q$:\\
       1.  Find $n$ such that $s_{n} \leq s_q < s_{n+1} $\\
@@ -332,6 +353,11 @@ This is a challenging task due to changes in viewpoint, imaging conditions and t
       Indeed, since we are learning with a single positive example, intuitively, we cannot guarantee that the learned partition of the space will generalize well to other positives, whose scores in the test set can potentially drop significantly (this is indeed what we observe in practice). By contrast, since we are learning from a comparatively large number of negative examples, we can trust the fact that new negative examples will stay in the half-space containing the negative training set, so that their scores are very unlikely to be large. Our method is therefore based on the fact that we can measure reliably how surprising a high score would be if it was the score of a negative example. This exactly means that we can control false positives (type I error) reasonably well but not false negatives (type II error or equivalently the power of our test/classifier), exactly as in the Neyman-Pearson framework.
 
       An additional reason for not relying on positive examples for the calibration in our case is that (even if we had sufficiently many of them) the positive examples that we collect using location and geometric verification from the geotagged database typically have illumination conditions that are extremely similar to each other and not representative of the distribution of test positives which can have very different illuminations. This is because of the controlled nature of the capturing process of geotagged street-level imagery (e.g.\ Google street-view) used for experiments in this work. Close-by images are typically captured at a similar time (e.g. on the same day) and under similar imaging conditions.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%  
+\section{Affine calibration by re-normalization}
+\label{sec:calibrationRenorm}
+%%%%%%%%%%%%%%%%%%%%%%%%%%  
 
 
 
